@@ -1,3 +1,8 @@
+2006-01-16  Ankit Jain  <jankit@novell.com>
+
+	* gen-type.cs: New test case for handling a MemberRef with
+	a TypeSpec parent.
+
 2005-11-23  Ankit Jain  <jankit@novell.com>
 
 	* gen-cattr.cs: New test case for custom attributes on
